# st-snake

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
